<resources>
    <string name="app_name">BookTradinging_login</string>
    <string name="tab_menu_home">Home</string>
    <string name="tab_menu_message">Message</string>
    <string name="tab_menu_store">Store</string>
    <string name="tab_menu_cart">Cart</string>
    <string name="tab_menu_setting">Setting</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>